--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -16,7 +16,7 @@
       margin: 0;
       overflow-x: hidden;
     }</style>
-    <title>React Portfolio Website</title>
+    <title>Alex Bali</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
